[gd_scene load_steps=7 format=3 uid="uid://cl03t5imc42nl"]

[ext_resource type="Script" path="res://scenes/Scene_Final.gd" id="1_lcaip"]
[ext_resource type="PackedScene" uid="uid://cc1m2a1obsyn4" path="res://addons/fpc/character.tscn" id="1_qlmnn"]
[ext_resource type="PackedScene" uid="uid://dvabagf4huwm6" path="res://prefabs/enforcer.tscn" id="2_qaarp"]
[ext_resource type="PackedScene" uid="uid://dvh2vqgob2niq" path="res://prefabs/apartment/apartment_hall_scene.tscn" id="2_qgcx3"]
[ext_resource type="PackedScene" uid="uid://rfla4vbmdnoc" path="res://prefabs/heartbeater.tscn" id="4_4eqkm"]
[ext_resource type="PackedScene" uid="uid://byj4hpp1jdr74" path="res://prefabs/white_noise_control.tscn" id="5_wfnxm"]

[node name="SceneFinal" type="Node3D"]
script = ExtResource("1_lcaip")
_enforcerScene = ExtResource("2_qaarp")
max_enforcer_dist = 50.0

[node name="Character" parent="." instance=ExtResource("1_qlmnn")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 21.5, 0, 5)
_initial_fov_intensity = 1.0

[node name="ApartmentHallScene" parent="." instance=ExtResource("2_qgcx3")]

[node name="Heartbeater" parent="." instance=ExtResource("4_4eqkm")]
bus = &"Master"
intensity = 1.0

[node name="WhiteNoiseControl" parent="." instance=ExtResource("5_wfnxm")]

[connection signal="hit_by_enforcer" from="Character" to="." method="_on_character_hit_by_enforcer"]
[connection signal="player_hall_3" from="ApartmentHallScene" to="." method="_on_apartment_hall_scene_player_hall_3"]
